--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       overflow: hidden;
       width: 100%;
       height: 50vh;
-      background-image: url(https://flowcv.me/alimohammadnia/photo-v4lnw6xjawvv.jpg);
+      background-image: url(./alimohammadnia.jpg);
       background-position: 50% 50%;
       background-size: cover;
       background-repeat: no-repeat;
